--- a/styles.css
+++ b/styles.css
@@ -1626,3 +1626,17 @@ div.odd{
 }
 
 .filter-container{}
+
+.videoWrapper {
+	position: relative;
+	padding-bottom: 53.5%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
